# trading_ai

./: .env.example  .gitignore  README.md  SUMMARY.md  api_client.py  app.py  pyproject.toml  requirements.txt  stat.xlsx
config/: __init__.py  constants.py  settings.py  styles.py
docs/: API_REFERENCE.md
pages/: 1_Informations_Marches.py
super_trader/: agent.py  data_manager.py  indicators.py  trading_env.py
tests/: __init__.py  test_trading.py
utils/: __init__.py  data_buffer.py  system_wrapper.py  trading_utils.py
